--- a/server/package.json
+++ b/server/package.json
@@ -20,5 +20,8 @@
     "node": "^20.4.0",
     "nodemon": "^2.0.22",
     "socket.io": "^4.7.1"
+  },
+  "engines": {
+    "node": ">=14.20.1"
   }
 }
