--- a/package.json
+++ b/package.json
@@ -18,7 +18,15 @@
   },
   "description": "",
   "dependencies": {
-    "node": "^20.4.0"
+    "node": "^20.4.0",
+    "cloudinary": "^1.37.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.3.4",
+    "socket.io": "^4.7.1"
   },
   "engines": {
     "node": ">=14.20.1"
